--- a/pace-plan-pro/package.json
+++ b/pace-plan-pro/package.json
@@ -9,14 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.54.0",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.20",
+    "expo-file-system": "~18.1.11",
+    "expo-router": "~5.1.4",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
+    "moti": "^0.30.0",
+    "nativewind": "^4.1.23",
+    "pdf-lib": "^1.17.1",
+    "phosphor-react-native": "^3.0.0",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "victory-native": "^41.18.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
   "private": true
