--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "expo": "^53.0.20",
     "zustand": "^5.0.7"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.9",
+    "typescript": "~5.8.3"
   }
 }
