--- a/pace-plan-pro/package.json
+++ b/pace-plan-pro/package.json
@@ -1,18 +1,23 @@
 {
   "name": "pace-plan-pro",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
+  "packageManager": "yarn@1.22.22",
   "scripts": {
+    "dev": "expo start",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "~0.20.0",
     "@supabase/supabase-js": "^2.54.0",
     "dayjs": "^1.11.13",
     "expo": "~53.0.20",
+    "expo-constants": "~17.1.7",
     "expo-file-system": "~18.1.11",
+    "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
@@ -21,21 +26,23 @@
     "pdf-lib": "^1.17.1",
     "phosphor-react-native": "^3.0.0",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "tailwindcss": "^3.4.17",
     "victory-native": "^41.18.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.28.0",
     "@types/react": "~19.0.10",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3"
   },
   "private": true
