--- a/pace-plan-pro/package.json
+++ b/pace-plan-pro/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/metro-config": "~0.20.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@supabase/supabase-js": "^2.54.0",
     "dayjs": "^1.11.13",
     "expo": "~53.0.20",
@@ -25,6 +26,7 @@
     "nativewind": "^4.1.23",
     "pdf-lib": "^1.17.1",
     "phosphor-react-native": "^3.0.0",
+    "posthog-react-native": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
