--- a/pace-plan-pro/package.json
+++ b/pace-plan-pro/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~17.1.7",
     "expo-file-system": "~18.1.11",
     "expo-linking": "~7.1.7",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.4",
     "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
